--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "symfony/http-foundation": "^4.4|^5.0",
         "symfony/polyfill-ctype": "^1.8",
         "symfony/polyfill-php73": "^1.9",
+        "symfony/polyfill-php80": "^1.15",
         "psr/log": "~1.0"
     },
     "require-dev": {
