--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
     ],
     "require": {
         "php": "^7.2.5",
+        "symfony/deprecation-contracts": "^2.1",
         "symfony/error-handler": "^4.4|^5.0",
         "symfony/event-dispatcher": "^5.0",
         "symfony/http-foundation": "^4.4|^5.0",
