--- a/composer.json
+++ b/composer.json
@@ -66,9 +66,5 @@
         ]
     },
     "minimum-stability": "dev",
-    "extra": {
-        "branch-alias": {
-            "dev-master": "3.4-dev"
-        }
-    }
+    "version": "3.4-dev"
 }
