--- a/composer.json
+++ b/composer.json
@@ -17,10 +17,9 @@
     ],
     "require": {
         "php": ">=7.2.5",
-        "symfony/deprecation-contracts": "^2.1",
+        "symfony/deprecation-contracts": "^2.1|^3",
         "symfony/error-handler": "^4.4|^5.0|^6.0",
         "symfony/event-dispatcher": "^5.0|^6.0",
-        "symfony/http-client-contracts": "^1.1|^2",
         "symfony/http-foundation": "^5.3.7|^6.0",
         "symfony/polyfill-ctype": "^1.8",
         "symfony/polyfill-php73": "^1.9",
@@ -36,11 +35,12 @@
         "symfony/dom-crawler": "^4.4|^5.0|^6.0",
         "symfony/expression-language": "^4.4|^5.0|^6.0",
         "symfony/finder": "^4.4|^5.0|^6.0",
+        "symfony/http-client-contracts": "^1.1|^2|^3",
         "symfony/process": "^4.4|^5.0|^6.0",
         "symfony/routing": "^4.4|^5.0|^6.0",
         "symfony/stopwatch": "^4.4|^5.0|^6.0",
         "symfony/translation": "^4.4|^5.0|^6.0",
-        "symfony/translation-contracts": "^1.1|^2",
+        "symfony/translation-contracts": "^1.1|^2|^3",
         "psr/cache": "^1.0|^2.0|^3.0",
         "twig/twig": "^2.13|^3.0.4"
     },
