--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
         "symfony/deprecation-contracts": "^2.5|^3",
         "symfony/error-handler": "^6.3",
         "symfony/event-dispatcher": "^5.4|^6.0",
-        "symfony/http-foundation": "^5.4.21|^6.2.7",
+        "symfony/http-foundation": "^6.2.7",
         "symfony/polyfill-ctype": "^1.8",
         "psr/log": "^1|^2|^3"
     },
@@ -36,11 +36,14 @@
         "symfony/finder": "^5.4|^6.0",
         "symfony/http-client-contracts": "^2.5|^3",
         "symfony/process": "^5.4|^6.0",
+        "symfony/property-access": "^5.4|^6.0",
         "symfony/routing": "^5.4|^6.0",
+        "symfony/serializer": "^6.3",
         "symfony/stopwatch": "^5.4|^6.0",
         "symfony/translation": "^5.4|^6.0",
         "symfony/translation-contracts": "^2.5|^3",
         "symfony/uid": "^5.4|^6.0",
+        "symfony/validator": "^5.4|^6.0",
         "psr/cache": "^1.0|^2.0|^3.0",
         "twig/twig": "^2.13|^3.0.4"
     },
