--- a/composer.json
+++ b/composer.json
@@ -43,7 +43,7 @@
         "symfony/translation": "^5.4|^6.0",
         "symfony/translation-contracts": "^2.5|^3",
         "symfony/uid": "^5.4|^6.0",
-        "symfony/validator": "^5.4|^6.0",
+        "symfony/validator": "^6.3",
         "psr/cache": "^1.0|^2.0|^3.0",
         "twig/twig": "^2.13|^3.0.4"
     },
