--- a/composer.json
+++ b/composer.json
@@ -16,35 +16,35 @@
         }
     ],
     "require": {
-        "php": ">=8.1",
+        "php": ">=8.2",
         "symfony/deprecation-contracts": "^2.5|^3",
-        "symfony/error-handler": "^6.3|^7.0",
-        "symfony/event-dispatcher": "^5.4|^6.0|^7.0",
-        "symfony/http-foundation": "^6.2.7|^7.0",
+        "symfony/error-handler": "^6.4|^7.0",
+        "symfony/event-dispatcher": "^6.4|^7.0",
+        "symfony/http-foundation": "^6.4|^7.0",
         "symfony/polyfill-ctype": "^1.8",
         "psr/log": "^1|^2|^3"
     },
     "require-dev": {
-        "symfony/browser-kit": "^5.4|^6.0|^7.0",
-        "symfony/clock": "^6.2|^7.0",
-        "symfony/config": "^6.1|^7.0",
-        "symfony/console": "^5.4|^6.0|^7.0",
-        "symfony/css-selector": "^5.4|^6.0|^7.0",
-        "symfony/dependency-injection": "^6.3|^7.0",
-        "symfony/dom-crawler": "^5.4|^6.0|^7.0",
-        "symfony/expression-language": "^5.4|^6.0|^7.0",
-        "symfony/finder": "^5.4|^6.0|^7.0",
+        "symfony/browser-kit": "^6.4|^7.0",
+        "symfony/clock": "^6.4|^7.0",
+        "symfony/config": "^6.4|^7.0",
+        "symfony/console": "^6.4|^7.0",
+        "symfony/css-selector": "^6.4|^7.0",
+        "symfony/dependency-injection": "^6.4|^7.0",
+        "symfony/dom-crawler": "^6.4|^7.0",
+        "symfony/expression-language": "^6.4|^7.0",
+        "symfony/finder": "^6.4|^7.0",
         "symfony/http-client-contracts": "^2.5|^3",
-        "symfony/process": "^5.4|^6.0|^7.0",
-        "symfony/property-access": "^5.4.5|^6.0.5|^7.0",
-        "symfony/routing": "^5.4|^6.0|^7.0",
-        "symfony/serializer": "^6.3|^7.0",
-        "symfony/stopwatch": "^5.4|^6.0|^7.0",
-        "symfony/translation": "^5.4|^6.0|^7.0",
+        "symfony/process": "^6.4|^7.0",
+        "symfony/property-access": "^6.4|^7.0",
+        "symfony/routing": "^6.4|^7.0",
+        "symfony/serializer": "^6.4|^7.0",
+        "symfony/stopwatch": "^6.4|^7.0",
+        "symfony/translation": "^6.4|^7.0",
         "symfony/translation-contracts": "^2.5|^3",
-        "symfony/uid": "^5.4|^6.0|^7.0",
-        "symfony/validator": "^6.3|^7.0",
-        "symfony/var-exporter": "^6.2|^7.0",
+        "symfony/uid": "^6.4|^7.0",
+        "symfony/validator": "^6.4|^7.0",
+        "symfony/var-exporter": "^6.4|^7.0",
         "psr/cache": "^1.0|^2.0|^3.0",
         "twig/twig": "^2.13|^3.0.4"
     },
@@ -52,21 +52,21 @@
         "psr/log-implementation": "1.0|2.0|3.0"
     },
     "conflict": {
-        "symfony/browser-kit": "<5.4",
-        "symfony/cache": "<5.4",
-        "symfony/config": "<6.1",
-        "symfony/console": "<5.4",
-        "symfony/form": "<5.4",
-        "symfony/dependency-injection": "<6.3",
-        "symfony/doctrine-bridge": "<5.4",
-        "symfony/http-client": "<5.4",
+        "symfony/browser-kit": "<6.4",
+        "symfony/cache": "<6.4",
+        "symfony/config": "<6.4",
+        "symfony/console": "<6.4",
+        "symfony/form": "<6.4",
+        "symfony/dependency-injection": "<6.4",
+        "symfony/doctrine-bridge": "<6.4",
+        "symfony/http-client": "<6.4",
         "symfony/http-client-contracts": "<2.5",
-        "symfony/mailer": "<5.4",
-        "symfony/messenger": "<5.4",
-        "symfony/translation": "<5.4",
+        "symfony/mailer": "<6.4",
+        "symfony/messenger": "<6.4",
+        "symfony/translation": "<6.4",
         "symfony/translation-contracts": "<2.5",
-        "symfony/twig-bridge": "<5.4",
-        "symfony/validator": "<5.4",
+        "symfony/twig-bridge": "<6.4",
+        "symfony/validator": "<6.4",
         "twig/twig": "<2.13"
     },
     "autoload": {
