--- a/composer.json
+++ b/composer.json
@@ -67,6 +67,7 @@
         "symfony/translation-contracts": "<2.5",
         "symfony/twig-bridge": "<5.4",
         "symfony/validator": "<5.4",
+        "symfony/var-dumper": "<6.3",
         "twig/twig": "<2.13"
     },
     "autoload": {
