--- a/composer.json
+++ b/composer.json
@@ -45,7 +45,7 @@
         "symfony/validator": "^6.4|^7.0",
         "symfony/var-exporter": "^6.4|^7.0",
         "psr/cache": "^1.0|^2.0|^3.0",
-        "twig/twig": "^2.13|^3.0.4"
+        "twig/twig": "^3.0.4"
     },
     "provide": {
         "psr/log-implementation": "1.0|2.0|3.0"
@@ -67,7 +67,7 @@
         "symfony/twig-bridge": "<6.4",
         "symfony/validator": "<6.4",
         "symfony/var-dumper": "<6.4",
-        "twig/twig": "<2.13"
+        "twig/twig": "<3.0.4"
     },
     "autoload": {
         "psr-4": { "Symfony\\Component\\HttpKernel\\": "" },
