[PropertyAccess][Serializer] Fix "type unknown" on denormalize

--- a/composer.json
+++ b/composer.json
@@ -35,9 +35,9 @@
         "symfony/finder": "^6.4|^7.0",
         "symfony/http-client-contracts": "^2.5|^3",
         "symfony/process": "^6.4|^7.0",
-        "symfony/property-access": "^6.4|^7.0",
+        "symfony/property-access": "^7.1",
         "symfony/routing": "^6.4|^7.0",
-        "symfony/serializer": "^6.4|^7.0",
+        "symfony/serializer": "^7.1",
         "symfony/stopwatch": "^6.4|^7.0",
         "symfony/translation": "^6.4|^7.0",
         "symfony/translation-contracts": "^2.5|^3",
