--- a/composer.json
+++ b/composer.json
@@ -47,7 +47,7 @@
         "symfony/var-dumper": "^6.4|^7.0",
         "symfony/var-exporter": "^6.4|^7.0",
         "psr/cache": "^1.0|^2.0|^3.0",
-        "twig/twig": "^3.12|^4.0"
+        "twig/twig": "^3.12"
     },
     "provide": {
         "psr/log-implementation": "1.0|2.0|3.0"
